--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+       <meta charset="UTF-8">
+       <link rel="icon" href="/favicon.ico">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <title>Vite App</title>
+</head>
+
+<body>
+       <div id="app"></div>
+       <!-- react示例代码 -->
+       <!-- <script type="module" src="/public/ammo.js">
+              Ammo().then(function(AmmoLib) {
+                     Ammo=AmmoLib;
+                     init(); animate();
+              })
+       </script> -->
+       <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
